# handmade-cc

./: Cargo.toml  README.md  build.rs
src/: ast.rs  compiler.rs  emitter.rs  environment.rs  error.rs  evaluator.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  symbol.rs  token.rs  verifier.rs  wat.rs
src/test/: mod.rs
src/test/data/: LICENSE  expected-results.json
src/test/data/tests/chapter_10/invalid_types/: redeclare_file_scope_var_as_fun.c  use_file_scope_variable_as_fun.c
src/test/data/tests/chapter_10/valid/: distinct_local_and_extern.c  multiple_static_file_scope_vars.c  push_arg_on_page_boundary.c  static_local_multiple_scopes.c  static_local_uninitialized.c  static_recursive_call.c  static_then_extern.c  static_variables_in_expressions.c  tentative_definition.c  type_before_storage_class.c
src/test/data/tests/chapter_4/valid/: precedence.c
src/test/data/tests/chapter_8/valid/: empty_loop_body.c
src/test/data/tests/const/invalid/: assigment.c  assign_to_const_arg.c  assign_to_const_arg_2.c  assign_to_const_global.c  assign_to_const_global_2.c  assign_to_const_variable.c  assign_to_const_variable_2.c  assign_var_to_const_global.c  const_return_value.c  division_by_zero.c  division_by_zero_reminder.c  mismatching_const.c  missing_type.c  missing_type_global.c  postfix.c  undefined_global.c  variable.c  wrong_const_placement.c
src/test/data/tests/const/valid/: const.c  const_in_for_init.c  constant_expression.c
src/test/data/tests/literals/invalid/: hex_too_big.c  invalid_binary_digit.c  invalid_hex_digit.c  no_binary_digit.c  no_hex_digit.c
(+60 files in other folders)
