[package]
name = "handmade-cc"
version = "0.1.0"
edition = "2021"

[features]
default = ["binary-output"]
binary-output = ["wat"]

[dependencies]
wat = { version = "1.220.0", optional = true }

[build-dependencies]
serde = "1.0.215"
serde_json = "1.0.133"
walkdir = "2.5.0"

[dev-dependencies]
wasmi = "0.39.1"
